k8s/base/http/ril-presenze/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ril-presenze
  namespace: http
  labels:
    app: ril-presenze
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ril-presenze
  template:
    metadata:
      labels:
        app: ril-presenze
    spec:
      containers:
      - name: ril-presenze
        image: nonzod/ril_presenze:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.1"
          limits:
            memory: "512Mi"
            cpu: "0.5"
        livenessProbe:
          httpGet:
            path: /status
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /status
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
