k8s/base/http/ril-presenze/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ril-presenze-service
  namespace: http
spec:
  selector:
    app: ril-presenze
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
